# my-little-mind-map

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.yml  justfile
.githooks/: pre-commit
.github/agents/: address-comments.agent.md  project-iteration-conductor.agent.md
.github/hooks/: validate-project-links-before-commit.json
.github/hooks/scripts/: run_validate_project_links_pre_commit.sh  validate_project_links_pre_commit.js
.github/instructions/: common.instructions.md
.github/skills/manage-project-flow-data/: SKILL.md
.github/workflows/: ci.yml
backend-service/: Cargo.toml  Dockerfile
backend-service/src/: lib.rs  main.rs
backend-service/src/handlers/: assets.rs  classifications.rs  mod.rs  notes.rs  references.rs  topic_relations.rs  topics.rs
backend-service/tests/: api_tests.rs
desktop-app/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
desktop-app/src/: App.tsx  main.tsx  types.ts
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: lib.rs  main.rs
desktop-app/src/components/: BacklinksPanel.tsx  MarkdownEditor.tsx  NoteEditor.tsx  NoteLinkAutocomplete.tsx  NoteList.tsx  StatusBar.tsx  TopicBrowser.tsx  TopicEditor.tsx  TopicList.tsx  TopicRelationManager.tsx  TopicSelector.tsx
desktop-app/src/lib/: markdown.ts
docs/: architecture.md  development.md  folders.md  operational.md  project-flow.md  release.md  specs.md  user.md
docs/development/: backend-service.md  cli.md  code-design.md  code-standards.md  desktop-app.md  documentation.md  git-flow.md  prerequisites.md  setup.md  shared-core-crux.md  web-app.md
docs/development/code-standards/: RUST.md  TS-REACT.md
mobile-apps/: README.md
mobile-apps/android/: settings.gradle.kts
mobile-apps/android/app/: build.gradle.kts
mobile-apps/ios/MindMap/: MindMapApp.swift
product/: docker-compose.yml
product/desktop-app/: package-lock.json  package.json
product/desktop-app/src/: App.tsx  types.ts  useApp.ts
product/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
product/desktop-app/src-tauri/src/: lib.rs
product/shared/: Cargo.toml
product/shared/src/: app.rs  effect.rs  event.rs  lib.rs  model.rs  viewmodel.rs  wasm.rs
product/shared_types/: Cargo.toml
product/shared_types/src/: frontmatter.rs  ids.rs  lib.rs  model.rs
product/storage/: Cargo.toml
product/storage/src/: error.rs  fs.rs  indexes.rs  lib.rs  storage.rs
product/storage/tests/: integration_test.rs
product/web-app/: package-lock.json  package.json  vite.config.ts
product/web-app/src/: App.css  App.tsx  types.ts  useApp.ts
project/: IDEA.md  PLAN.md  POC-decisions.md  POC-requirements.md  POC-status.md  POC.md  requirements.md
project/POC/: POC-decisions.md  POC-requirements.md  POC-results.md  POC-status.md
project/POC-phase-1/: POC_1_1_status.md  POC_1_requirements.md  POC_1_status.md
project/POC-phase-1/POC_1_design-data-model/: POC_1_data-model.md
project/POC-phase-2/: POC_2_1_markdown-editor-ast.md  POC_2_3_topic-management.md  POC_2_4_note-list-browse.md
project/POC-phase-3/: POC_3_2_paste-from-clipboard.md  POC_3_3_screen-region-capture.md  POC_3_4_file-media-preview.md  POC_3_requirements.md
project/POC-phase-4/: POC_4_1_link-creation-ui.md  POC_4_2_bidirectional-link-storage.md  POC_4_3_backlinks-display.md  POC_4_4_inline-references-sync.md  POC_4_requirements.md
project/POC-phase-5/: POC_5_1_sync-protocol-design.md  POC_5_2_crux-http-capability.md  POC_5_3_push-local-changes.md  POC_5_4_pull-remote-changes.md  POC_5_status.md
project/POC-phase-6/: POC_6_1_error-handling.md  POC_6_2_keyboard-shortcuts.md  POC_6_4_desktop-packaging.md  POC_6_5_backend-deployment.md
project/POC/POC-phase-1/: POC_1_1_design-data-model.md  POC_1_2_add-data-model-to-crux.md  POC_1_3_file-storage-library.md  POC_1_4_desktop-local-storage.md  POC_1_5_backend-api-crud.md  POC_1_6_backend-file-storage.md
project/POC/POC-phase-2/: POC_2_1_markdown-editor-ast.md  POC_2_2_create-save-note.md  POC_2_5_topic-filter-browse.md  POC_2_requirements.md  POC_2_status.md  mdast-evaluation.md
project/POC/POC-phase-3/: POC_3_1_file-upload.md  POC_3_status.md
project/POC/POC-phase-4/: POC_4_1_link-creation-ui.md  POC_4_2_bidirectional-link-storage.md  POC_4_3_backlinks-display.md  POC_4_4_inline-references-sync.md  POC_4_status.md
project/POC/POC-phase-5/: POC_5_1_sync-protocol-design.md  POC_5_2_crux-http-capability.md  POC_5_3_push-local-changes.md  POC_5_4_pull-remote-changes.md  POC_5_5_offline-first-queue.md  POC_5_requirements.md  POC_5_status.md
project/POC/POC-phase-6/: 6.6_status-bar.md  POC_6_1_error-handling.md  POC_6_2_keyboard-shortcuts.md  POC_6_3_app-settings.md  POC_6_4_desktop-packaging.md  POC_6_5_backend-deployment.md  (+2 more)
scripts/: README.md  package-lock.json  package.json  tsconfig.json
scripts/plan/: README.md  SPEC.md
scripts/project/: PLAN.md  TOOLING.md
shared/: Cargo.toml
shared/src/: app.rs  lib.rs  references.rs
shared_types/: Cargo.toml
shared_types/src/: lib.rs
storage/: Cargo.toml
storage/src/: assets.rs  config.rs  error.rs  lib.rs  notes.rs  relations.rs  topics.rs
storage/tests/: integration_tests.rs
tests/: README.md
web-app/: package-lock.json  package.json  pnpm-lock.yaml
web-app/src/: App.tsx
(+40 files in other folders)
