[workspace]
resolver = "2"
members = [
    "shared",
    "shared_types",
    "storage",
    "backend-service",
    "desktop-app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
crux_core = "0.17.0"
crux_macros = "0.8.0"
