[workspace]
resolver = "2"
members = [
    "product/shared_types",
    "product/shared",
    "product/storage",
    "product/desktop-app/src-tauri",
]

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
uuid        = { version = "1", features = ["v4", "serde", "js"] }
chrono      = { version = "0.4", features = ["serde"] }
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror   = "2"
