[package]
name = "backend-service"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
shared = { path = "../shared" }
storage = { path = "../storage" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
uuid.workspace = true
