[package]
name = "desktop-app"
version.workspace = true
edition.workspace = true

[lib]
name = "desktop_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-upload = "2"
tauri-plugin-fs = "2"
base64 = "0.22"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
crux_core.workspace = true
shared = { path = "../../shared" }
storage = { path = "../../storage" }
