[package]
name    = "shared_types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { workspace = true }
serde_yaml = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
