[package]
name    = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_types = { path = "../shared_types" }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
chrono       = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["full"] }
