[package]
name = "desktop-app"
version = "0.1.0"
description = "My Little Mind Map – desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
shared      = { path = "../../shared" }
storage     = { path = "../../storage" }
shared_types = { path = "../../shared_types" }

